--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section>
         <h3>Sobre Mim</h3>
         <p>
-            colocartextoaqui
+            Sou a Angélica, tenho 31 anos, sou formada em Estética e Cosmética e estou fazendo a transição de carreira para a área de Tecnologia e estou cursando Analise e Desenvolvimento de Sistema. 
         </p>
     </section>
     <section>
