--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
     <section>
         <h3>Sobre Mim</h3>
         <p>
-            Sou a Angélica, tenho 31 anos, sou formada em Estética e Cosmética e estou fazendo a transição de carreira para a área de Tecnologia e estou cursando Analise e Desenvolvimento de Sistema. 
-        </p>
+        Me chamo Angélica, sou de São Paulo, Capital, formada em Estética e Cosmética. Em 2022 resolvi fazer a transição de carreira para a área de Tecnologia pelo qual sou apaixonada. No momento estou cursando Analise e Desenvolvimento de Sistema.  
+        </p><br>
     </section>
     <section>
         <h3>Formação</h3>
         <p>
-            colocartextoaqui
-        </p>
+            Cursando graduação tecnologica em Analise e Desenvolvimento na Universidade Paulista - Unip.
+        </p><br>
     </section>
     <section>
         <h3>Cursos</h3>
         <p>
-            colocartextoaqui
+            Cursos em Vídeo - Html5 e Css - 2022.
         </p>
     </section>
 </main>
