--- a/contact.html
+++ b/contact.html
@@ -8,18 +8,20 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-    <nav>
-        <ul>
-<li><a href="index.html">< Voltar</a></li>
-        </ul>
-    </nav>
-    <header>
-        <div class="center"><img src="./img/angelica.img.jpg"></div>
-    </header>
-    <main>
-        <h1>Angélica Romualdo</h1>
-        <h2>Desenvolvedora de Sistemas</h2>
-        <p> Para entrar em contato através do e-mail</p>
-    </main>
+    <div class="container">
+        <nav>
+            <ul>
+    <li><a href="index.html">< Voltar</a></li>
+            </ul>
+        </nav>
+        <header>
+            <div class="center"><img src="./img/angelica.img.jpg"></div>
+        </header>
+        <main>
+            <h1>Angélica Romualdo</h1>
+            <h2>Desenvolvedora de Front End</h2>
+            <p> Para entrar em contato através do e-mail</p>
+        </main>
+    </div>
 </body>
 </html>
