--- a/project.html
+++ b/project.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">< Voltar </a></li>
-        </ul>
-    </nav>
-    <header>
-        <div class="center"><img src="./img/angelica.img.jpg"></div>
-    </header>
-    <main>
-       <h1>Projetos</h1>
-        <p>Aqui estão alguns dos projetos pelo qual realizei.</p>
-    </main>
+    <div class="container">
+        <nav>
+            <ul>
+                <li><a href="index.html">< Voltar </a></li>
+            </ul>
+        </nav>
+        <header>
+            <div class="center"><img src="./img/angelica.img.jpg"></div>
+        </header>
+        <main>
+           <h1>Projetos</h1>
+            <p>Aqui estão alguns dos projetos pelo qual realizei.</p>
+        </main>
+    </div>
 </body>
 </html>
