--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <section>
             <h3>Sobre Mim</h3>
             <p>
-            Me chamo Angélica, sou de São Paulo, Capital, formada em Estética e Cosmética. Em 2022 resolvi fazer a transição de carreira para a área de Tecnologia pelo qual sou apaixonada. No momento estou cursando Analise e Desenvolvimento de Sistema.  
+            Me chamo Angélica, sou de São Paulo/SP, formada em Estética e Cosmética. Entretanto em 2022 resolvi fazer a transição de carreira para a área de Tecnologia pelo qual sou apaixonada e como gosto de desafio de me sentir desafiada e conseguir resolver o problema e para obter mais conhecimento além dos cursos extra curriculares pelo qual já realizei e ainda continuo realizando e para obter conhecimento mais aprofundado na área entrei na faculdade onde curso Analise e Desenvolvimento de Sistema.  
             </p><br>
         </section>
         <section>
             <h3>Formação</h3>
             <p>
-                Cursando graduação tecnologica em Analise e Desenvolvimento na Universidade Paulista - Unip.
+                Cursando graduação tecnologica em Analise e Desenvolvimento de Sistema na Universidade Paulista - Unip.
             </p><br>
         </section>
         <section>
@@ -49,11 +49,15 @@
         </section>
     </main>
     <footer>
-        <a>
-            
+        <a href="https://github.com/geromualdo" target="_blank" rel="noopener noreferrer">
+            <img src="./img/github.svg"></img>
+            <p>GitHub</p>
+        </a>
+        <a href="https://www.linkedin.com/in/angelica-romualdo-9322bb51/" target="_blank" rel="noopener noreferrer">
+            <img src="./img/linkedin.svg"></img>
+            <p>Linkedin</p>
         </a>
     </footer>
     </div>
-    
 </body>
 </html>
