--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,8 @@
     <div class="container">
         <nav>
             <ul>
-    <li><a href="index.html">< Voltar</a></li>
+    <li><a href="index.html">Pagina Inicial</a></li>
+    <li><a href="project.html">Projetos</a></li>
             </ul>
         </nav>
         <header>
@@ -22,6 +23,16 @@
             <h2>Desenvolvedora de Front End</h2>
             <p> Para entrar em contato através do e-mail</p>
         </main>
+        <footer>
+            <a href="https://github.com/geromualdo" target="_blank" rel="noopener noreferrer">
+                <img src="./img/github.svg"></img>
+                <p>GitHub</p>
+            </a>
+            <a href="https://www.linkedin.com/in/angelica-romualdo-9322bb51/" target="_blank" rel="noopener noreferrer">
+                <img src="./img/linkedin.svg"></img>
+                <p>Linkedin</p>
+            </a>
+        </footer>
     </div>
 </body>
 </html>
