--- a/project.html
+++ b/project.html
@@ -12,6 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">< Voltar </a></li>
+                <li><a href="contact.html">Contato</a></li>
             </ul>
         </nav>
         <header>
@@ -21,6 +22,16 @@
            <h1>Projetos</h1>
             <p>Aqui estão alguns dos projetos pelo qual realizei.</p>
         </main>
+        <footer>
+            <a href="https://github.com/geromualdo" target="_blank" rel="noopener noreferrer">
+                <img src="./img/github.svg"></img>
+                <p>GitHub</p>
+            </a>
+            <a href="https://www.linkedin.com/in/angelica-romualdo-9322bb51/" target="_blank" rel="noopener noreferrer">
+                <img src="./img/linkedin.svg"></img>
+                <p>Linkedin</p>
+            </a>
+        </footer>
     </div>
 </body>
 </html>
