--- a/contact.html
+++ b/contact.html
@@ -8,21 +8,17 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
+    <header>
+    </header>
     <div class="container">
+        <div class="cabecalho"><img src="./img/angelica.img.jpg"></div>
         <nav>
-            <ul>
-    <li><a href="index.html">Pagina Inicial</a></li>
-    <li><a href="project.html">Projetos</a></li>
-            </ul>
-        </nav>
-        <header>
-            <div class="center"><img src="./img/angelica.img.jpg"></div>
-        </header>
-        <main>
             <h1>Angélica Romualdo</h1>
             <h2>Desenvolvedora de Front End</h2>
-            <p> Para entrar em contato através do e-mail</p>
-        </main>
+            <ul><button><strong><li><a class="menu" href="index.html">Pagina Inicial</a></li></strong></button>
+    <button><strong><li><a class="menu" href="project.html">Projetos</a></li></strong></button></ul>
+        </nav>
+    
         <footer>
             <a href="https://github.com/geromualdo" target="_blank" rel="noopener noreferrer">
                 <img src="./img/github.svg"></img>
