--- a/project.html
+++ b/project.html
@@ -8,16 +8,20 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
+    <header>
+       
+    </header>
     <div class="container">
+        <header> <div class="cabecalho"><img src="./img/angelica.img.jpg"></div> 
+        </header>
         <nav>
+            <h3>Angélica Romualdo</h3>
+            <h4>Desenvolvedora Front End</h4>
             <ul>
-                <li><a href="index.html">< Voltar </a></li>
-                <li><a href="contact.html">Contato</a></li>
+                <button><strong><li><a class="menu" href="index.html">< Voltar </a></li></strong></button>
+                <button><strong><li><a class="menu" href="contact.html">Contato</a></li></strong></button>
             </ul>
         </nav>
-        <header>
-            <div class="center"><img src="./img/angelica.img.jpg"></div>
-        </header>
         <main>
            <h1>Projetos</h1>
             <p>Aqui estão alguns dos projetos pelo qual realizei.</p>
