--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <div class="cabecalho"><img src="./img/angelica.img.jpg"></div>
         <nav>
             <h1>Angélica Romualdo</h1>
-            <h2>Desenvolvedora de Front End</h2>
+            <h2>Desenvolvedora Front End</h2>
             <ul><button><strong><li><a class="menu" href="index.html">Pagina Inicial</a></li></strong></button>
     <button><strong><li><a class="menu" href="project.html">Projetos</a></li></strong></button></ul>
         </nav>
