--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
         <div class="center"><img src="./img/angelica.img.jpg"></img></div>
     <h1>Angélica Romualdo</h1>
-    <h2>Desenvolvedora de Front End</h2>
+    <h2>Desenvolvedora Front End</h2>
     </header>
     
     <main>
